--- a/appDev/app6K/app/style/app.scss
+++ b/appDev/app6K/app/style/app.scss
@@ -41,12 +41,13 @@
 
 @import "app_components/zetka/zetka-formula.scss";
 @import "app_components/zetka/zetka-columns.scss";
+@import "app_components/zetka/zetka-modifyers.scss";
 
 
 // grid cases
 
-@import "app_pending/logo-matrix/logo-matrix";
-@import "app_pending/logo-matrix/design-template";
+//@import "app_pending/logo-matrix/logo-matrix";
+//@import "app_pending/logo-matrix/design-template";
 
 //@import "app_pending/logo-selector/logo-selector";
 
