--- a/appDev/app6K/app/style/app_components/content-markup/design-template.scss
+++ b/appDev/app6K/app/style/app_components/content-markup/design-template.scss
@@ -97,11 +97,9 @@ body {
         line-height: 1.714285;
     }
 
-    h2, .title,
-    h3, .min-title {
-        font-style:  italic;
+    a {
+        color: inherit;
     }
-
 }
 
 
