--- a/appDev/app6K/app/style/app_components/zetka/zetka-columns.scss
+++ b/appDev/app6K/app/style/app_components/zetka/zetka-columns.scss
@@ -228,3 +228,4 @@ $screenForAlways:       'min-width:1px';
     .zetka-as-main     { grid-template-columns: $zetka-main-limitless; }
 }
 
+/* EOF zetka columns */
