--- a/appDev/app6K/app/style/app_core/00-constructor.scss
+++ b/appDev/app6K/app/style/app_core/00-constructor.scss
@@ -1,6 +1,6 @@
 /* ==============================================================
-    app scss constructor - mixins and templates
-    2018.12.7
+    app sass constructor - mixins and templates
+    2019.1.16
 ============================================================== */
 
 
@@ -8,14 +8,15 @@
     /* contentbox--xy-centered */
     display: flex;
     justify-content: center;
-    align-items: center;
-    align-content: center;
+    align-items:     center;
+    align-content:   center;
 }
 @mixin contentbox--y-centered {
+    /* contentbox--y-centered */
     display: flex;
     justify-content: flex-start;
-    align-items: center;
-    align-content: center;
+    align-items:     center;
+    align-content:   center;
 }
 @mixin has-illustrated-background {
     /* has illustrated background */
@@ -23,29 +24,30 @@
     background-repeat:   no-repeat;
     background-position: center center;
 }
-
-@mixin disable-text-selection {
+@mixin has-disabled-text-selection {
+    /* has disabled text selection */
     -webkit-user-select: none;  /* Chrome all / Safari all */
     -moz-user-select: none;     /* Firefox all */
     -ms-user-select: none;      /* IE 10+ */
     user-select: none;          /* Likely future */
 }
-@mixin text-design-inherit {
+@mixin text-design-is-inherited {
     font-family: inherit;
     font-size:   inherit;
     line-height: inherit;
     font-weight: inherit;
 }
 @mixin text-is-visually-hidden {
-    /* has visually hidden text content */
+    /* is visually hidden text content */
     text-indent: 100%;
     white-space: nowrap;
-    overflow: hidden;
+    overflow:    hidden;
 }
 
 
-//* ------------------------------------ dev markup
-
+/* ==============================================================
+    unecessary dev markup
+============================================================== */
 
 .dev, [dev] {
     background: repeating-linear-gradient(
@@ -106,6 +108,5 @@
       rgba(0,0,0,0.1) 0.4rem
     );
 }
-
 
 /* eof app scss constructor */
