--- a/appDev/app6K/app/style/app_core/02-reset-html.scss
+++ b/appDev/app6K/app/style/app_core/02-reset-html.scss
@@ -1,29 +1,47 @@
 /* ==============================================================
     html base css 1004
-    2018.12.7
-*/
+    2019.1.16
+============================================================== */
+
+
 /* ------------------------------------ minimal box model */
+
+
 *, *:before, *:after     { box-sizing: inherit;    }
 html                     { box-sizing: border-box; height: 100%; }
 html, body               { margin: 0; padding: 0;  }
+
+
 /* ------------------------------------ basic unit & font sizes */
+
+
 html { font-size: 10px; }
 body { font-size: 16px; line-height: 1.5; }
+
+
 /* ------------------------------------ improve design & UX */
+
+
 html    { cursor: default; }
 body    { overflow-y: scroll; }
-canvas  { display: inline-block; }
 // UX: Single taps are dispatched immediately on clickable elements
 a, area, button, input, label, select, summary, textarea, [tabindex] {
     -ms-touch-action: manipulation;
     touch-action: manipulation;
 }
-/* ----------------- use semantic markup without standart design */
-article, section, header, footer, main, aside, nav, details
-    { display: block; }
-summary
-    { display: list-item; }
-nav ul, nav ol {
+
+
+/* ------------------------------------ avoid visual errors */
+
+
+img, svg { max-width: 100% }
+canvas   { display: inline-block; }
+
+
+/* ----------------- use semantic markup without browser`s design */
+
+
+nav ul, nav ol, ul.nav, ol.nav {
     padding: 0;
     margin: 0;
     list-style-type: none;
@@ -35,4 +53,122 @@ figure, figcaption, fieldset, legend {
     border:  0;
     white-space: normal;
 }
+article, section, header, footer, main, aside, nav, details { display: block; }
+summary { display: list-item; }
+
+
+//* ------------------------------------ html standarts
+
+
+h1, h2, h3, h4, h5, h6, p, blockquote, ul, ol {
+    margin:  0;
+    padding: 0;
+}
+a {
+    color: inherit;
+    background-color: transparent;
+    text-decoration: underline;
+}
+ul, ol {
+    margin-left:  1.5em;
+}
+hr {
+    border: 0;
+    background: transparent;
+    box-shadow: none;
+
+    /* use as visual spacer */
+    display:    block;
+    font-size:  inherit;
+    min-height: 1.5em;
+}
+figure {
+    display: block;
+    padding: 0;
+    margin:  0;
+}
+img {
+    display: inline-block;
+    vertical-align: middle;
+    border:    none;
+    max-width: 100%;
+}
+svg {
+    display: inline-block;
+    vertical-align: middle;
+    border:    none;
+    max-width: 100%;
+}
+table {
+    * {
+        text-align:     left;
+        vertical-align: top;
+    }
+    td {
+        padding-top:    1*$dim;
+        padding-bottom: 1*$dim;
+    }
+}
+[hidden], .hidden { display: none!important; }
+
+
+//* ------------------------------------ minimal form-item
+
+$form-space-vertical-padding:   0.25em;
+$form-space-horizontal-padding: 0.25em;
+
+
+%form-item {
+    /* has rows */
+    display:         flex;
+    flex-direction:  column;
+    flex-wrap:       nowrap;
+    justify-content: flex-start;
+    align-items:     stretch;
+    align-content:   center;
+    &>*     { order: 3 }
+    &>label { order: 1 }
+    &>input { order: 2 }
+}
+.form-item     { @extend %form-item; }
+.form-textarea { @extend %form-item; }
+.form-submit   { @extend %form-item; }
+
+label {
+    display: block;
+    padding: 0 $form-space-horizontal-padding;
+}
+input {
+    display: block;
+    width:   100%;
+    padding: $form-space-vertical-padding $form-space-horizontal-padding;
+
+    /* default font */
+    font-family: inherit;
+    font-size:   inherit;
+    line-height: inherit;
+}
+textarea {
+    display: block;
+    width:   100%;
+    padding: $form-space-horizontal-padding;
+    resize:  vertical;
+
+    /* default font */
+    font-family: inherit;
+    font-size:   inherit;
+    line-height: inherit;
+}
+button, .button, .is-button {
+    display:  inline-block;
+    vertical-align: middle;
+    padding: $form-space-vertical-padding $form-space-horizontal-padding;
+
+    /* default font */
+    font-family: inherit;
+    font-size:   inherit;
+    line-height: inherit;
+}
+
+
 /* eof html base */
